--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
    "name": "pokepi",
    "version": "1.0.0",
    "description": "L'API Pokepi permet à l'utilisateur de frabiquer son propre pokédex de pokémons",
-   "main": "server.js",
+   "main": "server.ts",
    "scripts": {
-      "test": "start"
+      "start": "node server.ts"
    },
    "repository": {
       "type": "git",
@@ -25,6 +25,8 @@
    "dependencies": {
       "cors": "^2.8.5",
       "express": "^4.18.2",
-      "mysql": "^2.18.1"
+      "mysql": "^2.18.1",
+      "swagger-jsdoc": "^6.2.7",
+      "swagger-ui-express": "^4.6.0"
    }
 }
