--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
    "description": "L'API Pokepi permet à l'utilisateur de frabiquer son propre pokédex de pokémons",
    "main": "server.ts",
    "scripts": {
-      "start": "node server.ts"
+      "build": "npx tsc",
+      "start": "node dist/server.js",
+      "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
    },
    "repository": {
       "type": "git",
@@ -28,5 +30,12 @@
       "mysql": "^2.18.1",
       "swagger-jsdoc": "^6.2.7",
       "swagger-ui-express": "^4.6.0"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.15",
+      "@types/node": "^18.11.18",
+      "concurrently": "^7.6.0",
+      "nodemon": "^2.0.20",
+      "typescript": "^4.9.4"
    }
 }
