--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "pokepi",
 	"version": "1.0.0",
-	"description": "L'API Pokepi permet à l'utilisateur de frabiquer son propre pokédex de pokémons",
-	"main": "server.ts",
+	"description": "Pokepi est une API permettant à l'utilisateur de choisir les pokémons dans son propre pokédex",
+	"main": "index.ts",
 	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon src/index.ts",
 		"build": "npx tsc",
-		"start": "node dist/server.js",
-		"dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
 		"prettier": "prettier --write ."
 	},
 	"repository": {
@@ -14,10 +14,10 @@
 		"url": "git+https://github.com/SkynixFr/PokePI.git"
 	},
 	"keywords": [
-		"API",
+		"Pokepi",
 		"Pokémon",
-		"Pokémon",
-		"Pokédex"
+		"Pokédex",
+		"API"
 	],
 	"author": "SkynixFr, Luffysonic",
 	"license": "ISC",
@@ -27,16 +27,17 @@
 	"homepage": "https://github.com/SkynixFr/PokePI#readme",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"helmet": "^6.0.1",
 		"mysql": "^2.18.1",
-		"swagger-jsdoc": "^6.2.7",
-		"swagger-ui-express": "^4.6.0"
+		"nodemon": "^2.0.20",
+		"sequelize": "^6.28.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
 		"@types/node": "^18.11.18",
-		"concurrently": "^7.6.0",
-		"nodemon": "^2.0.20",
 		"prettier": "^2.8.1",
 		"typescript": "^4.9.4"
 	}
