--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/express": "^4.17.15",
 		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.4"
 	}
 }
