--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.3.3",
 		"nodemon": "^2.0.20",
 		"sequelize": "^6.28.0"
 	},
