--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
 	},
 	"homepage": "https://github.com/SkynixFr/PokePI#readme",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
+		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^2.3.3",
 		"nodemon": "^2.0.20",
 		"sequelize": "^6.28.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
 		"@types/node": "^18.11.18",
