--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
+		"@types/jsonwebtoken": "^9.0.0",
 		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
 		"ts-node-dev": "^2.0.0",
