--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"homepage": "https://github.com/SkynixFr/PokePI#readme",
 	"dependencies": {
+		"axios": "^1.2.2",
 		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
