--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
+		"memory-cache": "^0.2.0",
 		"mysql2": "^2.3.3",
 		"nodemon": "^2.0.20",
 		"sequelize": "^6.28.0"
@@ -42,6 +43,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.0",
+		"@types/memory-cache": "^0.2.2",
 		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
 		"ts-node-dev": "^2.0.0",
