--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
 		"memory-cache": "^0.2.0",
 		"mysql2": "^2.3.3",
 		"nodemon": "^2.0.20",
-		"sequelize": "^6.28.0"
+		"sequelize": "^6.28.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^4.6.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
