--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"main": "index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"migration": "npx sequelize-cli db:migrate",
+		"remove_migration": "npx sequelize-cli db:migrate:undo:all",
+		"seed": "npx sequelize-cli db:seed:all",
 		"dev": "nodemon src/index.ts",
 		"prettier": "prettier --write ."
 	},
@@ -47,6 +50,7 @@
 		"@types/memory-cache": "^0.2.2",
 		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
+		"sequelize-cli": "^6.6.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.9.4"
 	}
