--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-rate-limit": "^6.8.0",
+		"jsonwebtoken": "^9.0.1",
 		"nodemon": "^3.0.1"
 	},
 	"devDependencies": {
 		"@prisma/client": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.4.5",
 		"prettier": "^3.0.0",
 		"prisma": "^5.0.0",
